[fix] a11y : don't broke outline (broken on FF), add box-shadow btn focus

--- a/limesurvey/mixins.less
+++ b/limesurvey/mixins.less
@@ -10,7 +10,7 @@
 @import "@{bootstrap}/mixins/resize.less";
 @import "@{bootstrap}/mixins/responsive-visibility.less";
 @import "@{bootstrap}/mixins/size.less";
-@import "@{bootstrap}/mixins/tab-focus.less";
+@import "@{limesurvey}/mixins/tab-focus.less";
 @import "@{bootstrap}/mixins/reset-text.less";
 @import "@{bootstrap}/mixins/text-emphasis.less";
 @import "@{bootstrap}/mixins/text-overflow.less";
